--- a/app/src/main/res/layout/fragment_hidrico.xml
+++ b/app/src/main/res/layout/fragment_hidrico.xml
@@ -7,11 +7,11 @@
     tools:context=".HidricoFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hidrico-Fragment"
-        android:textSize="26dp"
         android:layout_gravity="center"/>
 
 </FrameLayout>
