--- a/app/src/main/res/layout/fragment_eolico.xml
+++ b/app/src/main/res/layout/fragment_eolico.xml
@@ -7,11 +7,11 @@
     tools:context=".EolicoFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
+    <ImageView
+        android:src="@drawable/aerogerador"
+        android:id="@+id/image"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Eolico-Fragment"
-        android:textSize="26dp"
         android:layout_gravity="center"/>
 
 
