--- a/app/src/main/res/layout/activity_eolico.xml
+++ b/app/src/main/res/layout/activity_eolico.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/teal_200"
-    tools:context=".EolicoActivity">
+    tools:context=".activity.EolicoActivity">
 
     <ImageView
         android:id="@+id/image"
