--- a/app/src/main/res/layout/fragment_hidrico.xml
+++ b/app/src/main/res/layout/fragment_hidrico.xml
@@ -9,7 +9,7 @@
     <!-- TODO: Update blank fragment layout -->
 
     <ImageView
-        android:src="@drawable/hidreletrica"
+        android:src="@drawable/hidreletrica2"
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
